[package]
name = "RustSafe"
version = "1.4.3"
edition = "2024"

[[bin]]
name = "rsafe"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
aes-gcm = "0.10.3"
hex = "0.4.3"
hmac = "0.12.1"
rand = "0.9.1"
rpassword = "7.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
tabled = "0.20.0"
